fixed colors for dark mode

--- a/public/assets/css/color.css
+++ b/public/assets/css/color.css
@@ -21,7 +21,8 @@ body.theme-dark p,
 body.theme-dark a,
 body.theme-dark span,
 body.theme-dark .header-left a,
-body.theme-dark .header-left span {
+body.theme-dark .header-left span,
+body.theme-dark .news-title {
     color: var(--white) !important;
 }
 
@@ -34,7 +35,10 @@ body.theme-dark .header-wrap,
 body.theme-dark .sidebar,
 body.theme-dark .graph-wrap,
 body.theme-dark .content-footer,
-body.theme-dark .table-title {
+body.theme-dark .table-title,
+body.theme-dark .news-wrapper,
+body.theme-dark .banner-item,
+body.theme-dark .other-news-singlewrapper {
     background-color: var(--black);
 }
 
